// Original file: src/proto/kitty_chan.proto


export interface IMessageReaction {
  'guildId'?: (string);
  'channelId'?: (string);
  'messageId'?: (string);
  'userId'?: (string);
  'messageContent'?: (string);
  'isBot'?: (string);
  'emoji'?: (string);
  'payload'?: (string);
}

export interface IMessageReaction__Output {
  'guildId'?: (string);
  'channelId'?: (string);
  'messageId'?: (string);
  'userId'?: (string);
  'messageContent'?: (string);
  'isBot'?: (string);
  'emoji'?: (string);
  'payload'?: (string);
}
